# truelist-django

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/truelist_django/: __init__.py  apps.py  cache.py  fields.py  settings.py  validators.py
tests/: conftest.py  django_settings.py  test_cache.py  test_fields.py  test_settings.py  test_validators.py
